--- a/index.html
+++ b/index.html
@@ -145,7 +145,8 @@
 
     <!-- Personal Message Modal -->
     <div id="personal-message-modal" class="modal-overlay">
-        <div class="bg-white p-8 rounded-xl shadow-2xl max-w-sm w-11/12 transform transition-all scale-100">
+        <!-- ADDED pt-10 to push content down -->
+        <div class="bg-white p-8 pt-10 rounded-xl shadow-2xl max-w-sm w-11/12 transform transition-all scale-100">
             <h2 class="romantic-font text-3xl text-pink-600 mb-4 border-b pb-2">A Secret Message Just for You</h2>
             <p class="text-gray-700 text-md mb-6 text-left" style="white-space: pre-line;">
                 Baby i really hope you find this secret message,
